Atualizar o style.css

--- a/style.css
+++ b/style.css
@@ -48,7 +48,14 @@ img{
   margin: auto;
   width: 200px;
   
- 
-  
+}
+
+input[type="text"] {
+  display: block;
+  margin: auto;
+  text-align: center;
+  border-radius: 5px;
+  padding: 2px;
+  margin-top: 20px ;
   
 }
